# cpython-interop-examples

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: dev.Dockerfile  devcontainer.json
examples/: CMakeLists.txt  capi-test.py
examples/capi/: CMakeLists.txt  capi.h  main.cpp
